--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,13 @@
       "name": "Liondeer Community",
       "homepage": "https://github.com/orgs/LionAndDeer/people"
     }
-  ]
+  ],
+  "extra": {
+    "symfony": {
+      "endpoint": [
+        "https://github.com/LionAndDeer/recipes",
+        "flex://defaults"
+      ]
+    }
+  }
 }
