--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
   "type": "symfony-bundle",
   "require": {
     "php": ">=8.1",
-    "symfony/framework-bundle": "^6.1",
-    "symfony/flex": "^2"
+    "symfony/symfony": "^6.2",
+    "symfony/flex": "^2.2",
+    "symfony/framework-bundle": "^6.1"
   },
   "autoload": {
     "psr-4": {
