--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
   "require": {
     "php": ">=8.1",
     "symfony/flex": "^2.2",
-    "symfony/framework-bundle": "^6.1"
+    "symfony/framework-bundle": "^6.1",
+    "symfony/maker-bundle": ">=v1.48.0",
+    "symfony/translation": ">=6.3.x-dev"
   },
   "autoload": {
     "psr-4": {
