final version after testing

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,28 @@
   "type": "symfony-bundle",
   "require": {
     "php": ">=8.1",
-    "symfony/flex": "^2.2",
-    "symfony/framework-bundle": "^6.1",
-    "symfony/maker-bundle": ">=v1.48.0",
-    "symfony/translation": ">=6.3.x-dev"
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "doctrine/annotations": "^2.0",
+    "liondeer/framework": "^1.0",
+    "symfony/console": "6.2.*",
+    "symfony/dotenv": "6.2.*",
+    "symfony/flex": "^2",
+    "symfony/framework-bundle": "6.2.*",
+    "symfony/http-client": "6.2.*",
+    "symfony/maker-bundle": "*",
+    "symfony/property-access": "6.2.*",
+    "symfony/property-info": "6.2.*",
+    "symfony/runtime": "6.2.*",
+    "symfony/security-bundle": "6.2.*",
+    "symfony/serializer": "6.2.*",
+    "symfony/translation": "6.2.*",
+    "symfony/twig-bundle": "6.2.*",
+    "symfony/yaml": "6.2.*"
+  },
+  "require-dev": {
+    "symfony/stopwatch": "6.2.*",
+    "symfony/web-profiler-bundle": "6.2.*"
   },
   "autoload": {
     "psr-4": {
@@ -37,6 +55,12 @@
   "config": {
     "allow-plugins": {
       "symfony/flex": true
+    }
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
     }
   }
 }
