--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "doctrine/annotations": "^2.0",
-    "liondeer/framework": "^1.0",
     "symfony/console": "6.2.*",
     "symfony/dotenv": "6.2.*",
     "symfony/flex": "^2",
@@ -54,7 +53,8 @@
   ],
   "config": {
     "allow-plugins": {
-      "symfony/flex": true
+      "symfony/flex": true,
+      "symfony/runtime": true
     }
   },
   "scripts": {
