--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,14 @@
-- name: Tag/Release on Push Action
-  # You may pin to the exact commit or the version.
-  # uses: rymndhng/release-on-push-action@8e3c8b4b322c06d1032728971a4eb076e45cd33e
-  uses: rymndhng/release-on-push-action@v0.27.0
-  with:
-    # The bumping scheme to use by default. One of minor|major|patch|norelease
-    bump_version_scheme: 
-    # Additional text to insert into the release's body.
-    release_body: # optional
-    # Prefix to append to git tags. To unset this, set version_prefix to an empty string.
-    tag_prefix: # optional, default is v
-    # Name of the release. Supports these template variables:
-    release_name: # default is <RELEASE_TAG>
-    # Maximum number of commits to add to release body
-    max_commits: # optional, default is 50
-    # When set to 'true', uses Github's Generated Release Notes instead of this plugin's release notes
-    use_github_release_notes: # optional, default is false
-    # When set to 'true', will compute the next tag, but will not create a release.
-    dry_run: # optional, default is false
+on: 
+  push:
+    branches:
+      - master
+
+jobs:
+  release-on-push:
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: rymndhng/release-on-push-action@master
+        with:
+          bump_version_scheme: minor
