--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
           bump_version_scheme: minor
           tag_prefix: v
           release_name: "Release <RELEASE_VERSION>"
+          release_body: false
           
       - name: Check Output Parameters
         run: |
