changed bump_version_scheme to patch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: rymndhng/release-on-push-action@v0.27.0
         with:
-          bump_version_scheme: minor
+          bump_version_scheme: patch
           tag_prefix: v
           release_name: "Release <RELEASE_VERSION>"
           release_body: false
