--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,24 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "doctrine/annotations": "^2.0",
-    "symfony/console": "6.2.*",
-    "symfony/dotenv": "6.2.*",
+    "symfony/console": "^6.2.1",
+    "symfony/dotenv": "^6.2.1",
     "symfony/flex": "^2",
-    "symfony/framework-bundle": "6.2.*",
-    "symfony/http-client": "6.2.*",
+    "symfony/framework-bundle": "^6.2.1",
+    "symfony/http-client": "^6.2.1",
     "symfony/maker-bundle": "*",
-    "symfony/property-access": "6.2.*",
-    "symfony/property-info": "6.2.*",
-    "symfony/runtime": "6.2.*",
-    "symfony/security-bundle": "6.2.*",
-    "symfony/serializer": "6.2.*",
-    "symfony/translation": "6.2.*",
-    "symfony/twig-bundle": "6.2.*",
-    "symfony/yaml": "6.2.*"
+    "symfony/property-access": "^6.2.1",
+    "symfony/property-info": "^6.2.1",
+    "symfony/runtime": "^6.2.1",
+    "symfony/security-bundle": "^6.2.1",
+    "symfony/serializer": "^6.2.1",
+    "symfony/translation": "^6.2.1",
+    "symfony/twig-bundle": "^6.2.1",
+    "symfony/yaml": "^6.2.1"
   },
   "require-dev": {
-    "symfony/stopwatch": "6.2.*",
-    "symfony/web-profiler-bundle": "6.2.*"
+    "symfony/stopwatch": "^6.2.1",
+    "symfony/web-profiler-bundle": "^6.2.1"
   },
   "autoload": {
     "psr-4": {
